Fix ridership chart not showing, marker size setting

--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,7 @@ html, body {
     /* padding: 1rem; */
     height: 100vh;
     display: none;
+    overflow-y: scroll;
 }
 
 .buses-overview-grid {
@@ -288,6 +289,7 @@ html, body {
 
 .ridership-super-wrapper {
     display: none;
+    margin-bottom: 5rem;
 }
 
 .ridership-title {
